app/css/forms.css
@media only screen and (max-width: 768px) {
    form .col-sm-3 {
        margin-bottom: 20px;
    }
}

.col-controls {
    overflow: hidden;
}

.form-editable .control-label {
    cursor: move;
    cursor: grab;
}

.form-group.required .control-label:after {
   content: "*";
   color: red;
}

.form-horizontal .nested-form .form-group,
.form-horizontal .nested-controls.empty .form-group {
    margin-left: 0;
    margin-right: 0;
}

.form-control.picker {
    background-color: #fff !important;
}

.form-control.immutable {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.control-nested .nested-controls label.control-label,
.control-list .nested-controls label.control-label,
.control-collection .nested-controls label.control-label {
    text-align: left;
    padding-bottom: 4px;
}

.control-header .section-caret {
    display: inline-block;
    height: 100%;
    float: right;
    font-size: 0.5em;
    margin-right: 0.6em;
    margin-top: 0.7em;
    cursor: pointer;
}

.control-header .section-caret:after {
    font-family: 'Glyphicons Halflings';
    content: "\e160";
    float: right;
    color: grey;
}

.control-header.collapsed .section-caret:after {
    content: "\e159";
}

.form-header {
   margin-bottom: 20px;
}

.form-footer {
    margin-bottom: 20px;
    margin-top: 20px;
    padding-top: 20px;
    border-top: 1px solid #ddd;
}

.modal-body .form-footer {
    margin-bottom: 0;
}

.form-group .gmap {
    margin: 0 0 20px 0;
    height: 400px;
    border: 1px solid #ccc;
    border-radius: 4px;
}

.form-group .gmap .gm-style-iw h2 {
    font-size: 16px;
}

.valid-location .input-group-addon {
    background-color: #dff0d8;
}

.invalid-location .input-group-addon {
    background-color: #fcf8e3;
}

.input-group span.form-control + .input-group-addon,
.input-group span.form-control + .input-group-addon + .input-group-addon {
    border-left: 0;
}

.icon-span-filestyle {
    margin-right: 0.8ex;
}

.input-group-addon {
    background-color: #fff;
}

.input-group .btn:hover, .input-group .btn:focus, .input-group .btn:active {
    outline: none !important;
    box-shadow: none !important;
}

.color-select .select2-chosen > span,
.color-select .select2-result-label > span {
    display: inline-block;
    margin-right: 1ex;
    width: 20px;
}

.fileinput-button {
    position: relative;
    overflow: hidden;
    display: inline-block;
}

.fileinput-button input {
    position: absolute;
    top: 0;
    right: 0;
    margin: 0;
    opacity: 0;
    -ms-filter: 'alpha(opacity=0)';
    font-size: 200px;
    direction: ltr;
    cursor: pointer;
}

/* Fixes for IE < 8 */
@media screen\9 {
    .fileinput-button input {
        filter: alpha(opacity=0);
        font-size: 100%;
        height: 100%;
    }
}

.control-upload.disabled .fileinput-button {
    opacity: 0.5;
    cursor: none;
}

.control-upload .fileinput-button {
    float: left;
    margin-right: 20px;
}

.control-upload .progress {
    margin-top: 7px;
    margin-bottom: 0;
}

.upload-control {
    overflow: hidden;
}

/* dragula */

.drag-handle {
    cursor: move;
    cursor: grab;
}

.gu-mirror {
    position: fixed !important;
    margin: 0 !important;
    z-index: 9999 !important;
    opacity: 0.8;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
    filter: alpha(opacity=80);
}

.gu-hide {
    display: none !important;
}

.gu-unselectable {
    -webkit-user-select: none !important;
    -moz-user-select: none !important;
    -ms-user-select: none !important;
    user-select: none !important;
}

.gu-transit {
    opacity: 0.2;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
    filter: alpha(opacity=20);
}

